creacion main tienda y mediaquerry

--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 
-<body class="body-suc">
+<body class="body-sucu">
     <header class="header-suc">
         <section class="logo">
             <a href="../index.html">
