--- a/pages/innovacion.html
+++ b/pages/innovacion.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tu lugar de musica">
+    <meta name="keywords" content="Musica, Artistas, Instrumentos">
+    <meta name="category" content="Musica">
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
