--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -5,30 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 
 <body class="body-sucu">
-    <header class="header-suc">
-        <section class="logo">
-            <a href="../index.html">
-                <h1 class="titulo"> Rodteck
-                </h1>
-            </a>
-        </section>
-        <nav>
-            <ul class="navbar">
-                <li><a href="./tienda.html">Tienda</a></li>
-                <li><a href="./Innovacion.html">Innovacion</a></li>
-                <li><a href="./sucursales.html">Sucursales</a></li>
-                <li><a href="./soporte.html">Soporte</a></li>
-            </ul>
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <div class="col-md-3 mb-2 mb-md-0">
+          <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+            <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+          </a>
+        </div>
+  
+        <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="../index.html" class="nav-link px-2 link-secondary">Inicio</a></li>
+          <li><a href="./tienda.html" class="nav-link px-2">Tienda</a></li>
+          <li><a href="./innovacion.html" class="nav-link px-2">Innovacion</a></li>
+          <li><a href="#" class="nav-link px-2">Sucursales</a></li>
+          <li><a href="./soporte.html" class="nav-link px-2">Soporte</a></li>
         </nav>
-    </header>
+  
+        <div class="col-md-3 text-end">
+          <button type="button" class="btn btn-outline-primary me-2">Iniciar sesión</button>
+          <button type="button" class="btn btn-primary">Registrarse</button>
+        </div>
+      </header>
 
     <main>
-        <div class="mapas">
+        <div class="mapas container-fluid">
         <section class="mapa-1">
             <h2 class="tmapa1">Música Escuela Municipal de Música Cultura</h2>
             <article class="mapa1"><iframe
@@ -76,52 +81,26 @@
 
 
 
-
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-row">
-                <div class="footer-links">
-                    <h4>Compañia</h4>
-                    <ul>
-                        <li><a href="#">Nosotros</a></li>
-                        <li><a href="#">Nuestros servicios</a></li>
-                        <li><a href="#">Politica de privacidad</a></li>
-                        <li><a href="#">Afiliate</a></li>
-                    </ul>
-                </div>
-                <div class="footer-links">
-                    <h4>Ayuda</h4>
-                    <ul>
-                        <li><a href="#">Preguntas</a></li>
-                        <li><a href="#">Compras</a></li>
-                        <li><a href="#">Envios</a></li>
-                        <li><a href="#">Estatus de orden</a></li>
-                    </ul>
-                </div>
-                <div class="footer-links">
-                    <h4>Tienda</h4>
-                    <ul>
-                        <li><a href="#">Modelos</a></li>
-                        <li><a href="#">Mercancia</a></li>
-                        <li><a href="#">Ropa</a></li>
-                        <li><a href="#">Merchandising</a></li>
-                    </ul>
-                </div>
-                <div class="footer-links">
-                    <h4>Siguenos</h4>
-                    <div class="social-link">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Inicio</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Compañia</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Sumate</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Siguenos</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Soporte</a></li>
+        </ul>
+        <p class="text-center text-body-secondary">© 2024 Company Rodteck, Inc</p>
+      </footer>
 
 
 
 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
 
 </body>
 
